src/syntax/snapshots/llsp__syntax__tests__inner_unclosed_recovers_at_outer_closer.snap
---
source: src/syntax/tests.rs
expression: "dump(&parse(\"clojure\", \"[(a b] c\"))"
---
Root[List(Bracket)[List(Paren)![Atom"a" Atom"b"]] Atom"c"]
unclosed-delimiter@1..2
