src/syntax/snapshots/llsp__syntax__tests__prefix_without_form-2.snap
---
source: src/syntax/tests.rs
expression: "dump(&parse(\"common-lisp\", \"'(a\"))"
---
Root[Prefix"'"[List(Paren)![Atom"a"]]]
unclosed-delimiter@1..2
