src/syntax/snapshots/llsp__syntax__tests__prefix_without_form.snap
---
source: src/syntax/tests.rs
expression: "dump(&parse(\"common-lisp\", \"(a ')\"))"
---
Root[List(Paren)[Atom"a" Prefix"'"![]]]
missing-form@3..4
