src/syntax/snapshots/llsp__syntax__tests__read_eval_is_syntax.snap
---
source: src/syntax/tests.rs
expression: "dump(&parse(\"common-lisp\", \"#.(delete-file \\\"x\\\")\"))"
---
Root[Prefix"#."[List(Paren)[Atom"delete-file" Str"\"x\""]]]
