src/syntax/snapshots/llsp__syntax__tests__unclosed_list.snap
---
source: src/syntax/tests.rs
expression: "dump(&parse(\"common-lisp\", \"(defun f (x)\"))"
---
Root[List(Paren)![Atom"defun" Atom"f" List(Paren)[Atom"x"]]]
unclosed-delimiter@0..1
