src/syntax/snapshots/llsp__syntax__tests__unexpected_closer.snap
---
source: src/syntax/tests.rs
expression: "dump(&parse(\"scheme\", \"a) b\"))"
---
Root[Atom"a" Atom"b"]
unexpected-closer@1..2
