src/syntax/snapshots/llsp__syntax__tests__unterminated_literals-2.snap
---
source: src/syntax/tests.rs
expression: "dump(&parse(\"common-lisp\", \"#| a\"))"
---
Root[]
unterminated-comment@0..2
